volume.yml

apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    type: app
spec:
  securityContext:
    fsGroup: 0
  volumes:
    - name: app-pv
      persistentVolumeClaim:
        claimName: app-pvc
  containers:
    - name: nginx
      image: nginx
      securityContext:
        privileged: true
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: app-pv
      resources:
      limits:
        memory: "512Mi"
        cpu: "1"
      requests:
        memory: "218Mi"
        cpu: "0.2"
      ports:
      - containerPort: 80
