New2.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    type: app
  name: pod-ingress
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 32032
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    type: app
  type: LoadBalancer


---
apiVersion: v1
kind: Route
metadata:
  labels:
    type: app
  name: route1
  namespace: myproject
spec:
  port:
    targetPort: 80
  to:
    kind: Service
    name: pod-ingress
